Show word count read time and tags as part of post metadata.

--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -8,6 +8,8 @@ theme = "Farbpalette"
 change_language = "Sprache ändern"
 search = "Suchen"
 read = "Lesen"
+words = "Wörter"
+minutes = "Minuten"
 
 email = "E-Mail"
 phone = "Telefon"
