--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -1,25 +1,40 @@
-language_name = "Deutsch"
-language_symbol = "🇩🇪"
+# Required by the theme
 language_locale = "de_DE"
 language_date_format = "%d. %B %Y"
 
-language = "Sprache"
-theme = "Farbpalette"
-change_language = "Sprache ändern"
-search = "Suchen"
-read = "Lesen"
 words = "Wörter"
 minutes = "Minuten"
+read = "Lesen"
+
+
+# Required by the theme
+# (depending on enabled features of the theme)
+search = "Suchen"
+language = "Sprache"
+language_name = "Deutsch"
+change_language = "Sprache ändern"
+theme = "Farbpalette"
 
 email = "E-Mail"
 phone = "Telefon"
 
+
+# Used by sites based on the theme
+# (not necessarily needed in all languages)
 about = "Über"
-sitemap = "Sitemap"
-posts = "Posts"
-tags = "Tags"
-impressum = "Impressum"
-privacy_policy = "Datenschutzerklärung"
 blog = "Blog"
-resume = "Lebenslauf"
+comments = "Kommentare"
+home = "Home"
+impressum = "Impressum"
+main_skills = "Top-Fähigkeiten"
 movies = "Filme"
+other_skills = "Weitere Fähigkeiten"
+posts = "Posts"
+privacy_policy = "Datenschutzerklärung"
+projects = "Projekte"
+read_more = "Weiterlesen"
+resume = "Lebenslauf"
+sitemap = "Sitemap"
+skills = "Qualifikationen"
+skills_technologies = "Qualifikationen & Technologien"
+tags = "Tags"
