Allow to optionally translate taxonomies and their terms.

--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -25,10 +25,13 @@ phone = "Telefon"
 about = "Über"
 blog = "Blog"
 comments = "Kommentare"
+documentation = "Dokumentation"
+example = "Beispiel"
 home = "Home"
 impressum = "Impressum"
 main_skills = "Top-Fähigkeiten"
 movies = "Filme"
+movies_directors = "Regisseure"
 other_skills = "Weitere Fähigkeiten"
 posts = "Posts"
 privacy_policy = "Datenschutzerklärung"
@@ -38,4 +41,5 @@ resume = "Lebenslauf"
 sitemap = "Sitemap"
 skills = "Qualifikationen"
 skills_technologies = "Qualifikationen & Technologien"
-tags = "Tags"
+tags = "Schlagworte"
+yorgos_lanthimos = "Giorgos Lanthimos"
