--- a/i18n/hu.toml
+++ b/i18n/hu.toml
@@ -25,6 +25,8 @@ phone = "Telefon"
 about = "Névjegy"
 blog = "Blog"
 comments = "Hozzászólások"
+documentation = "Dokumentáció"
+example = "Példa"
 home = "Kezdőlap"
 impressum = "Impresszum (Jogi nyilatkozat)"
 main_skills = "Szakmai erősségek"
@@ -39,3 +41,4 @@ sitemap = "Oldaltérkép"
 skills = "Készségek"
 skills_technologies = "Készségek & Szakmai képességek"
 tags = "Címkék"
+yorgos_lanthimos = "Jórgosz Lánthimosz"
