--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -25,10 +25,13 @@ phone = "Phone"
 about = "About"
 blog = "Blog"
 comments = "Comments"
+documentation = "Documentation"
+example = "Example"
 home = "Home"
 impressum = "Impressum (Legal Notice)"
 main_skills = "Main Skills"
 movies = "Movies"
+movies_directors = "Directors"
 other_skills = "Additional Skills"
 posts = "Posts"
 privacy_policy = "Privacy Policy"
@@ -39,3 +42,4 @@ sitemap = "Sitemap"
 skills = "Skills"
 skills_technologies = "Skills & Technologies"
 tags = "Tags"
+yorgos_lanthimos = "Yorgos Lanthimos"
