Show singular word for one minute read times.
Co-authored-by: Michael Bushey <michael@realtymogul.com>

--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -3,6 +3,7 @@ language_locale = "de_DE"
 language_date_format = "%d. %B %Y"
 
 words = "Wörter"
+minute = "Minute"
 minutes = "Minuten"
 read = "Lesen"
 
